package seedu.interntrack;

import java.time.LocalDate;
import java.util.ArrayList;
import java.util.logging.Level;
import java.util.logging.Logger;

/**
 * Manages the list of internship applications.
 */
public class ApplicationList {
    private static final Logger logger = Logger.getLogger("ApplicationList");

    /**
     * Adds a new application parsed from the given input line to the list.
     *
     * @param userApplications The list to add the application to.
     * @param line             The raw input string containing application details.
     * @return The newly created Application object.
     * @throws InternTrackException If the input is missing required fields or has an invalid date.
     */
    public static Application addApplications(ArrayList<Application> userApplications,
                                              String line) throws InternTrackException {
        Application newApplication = Parser.createApplication(line);
        assert newApplication.getCompany() != null && !newApplication.getCompany().isEmpty() :
                "Application company should be valid after creation";
        assert newApplication.getRole() != null && !newApplication.getRole().isEmpty() :
                "Application role should be valid after creation";
        userApplications.add(newApplication);
        logger.log(Level.INFO, "Added new application to list. Total applications: " + userApplications.size());
        return newApplication;
    }

    /**
     * Edits the fields of an existing application.
     *
     * @param userApplications The list containing the application.
     * @param index            The 1-based index of the application to edit.
     * @param editDetails      The collection of updated field values.
     * @return The updated Application object.
     * @throws InternTrackException If the index is invalid or no update fields were
     *                              supplied.
     */
    public static Application editApplication(ArrayList<Application> userApplications,
                                              int index, EditDetails editDetails) throws InternTrackException {
        if (index < 1 || index > userApplications.size()) {
            logger.warning("Edit failed: application index out of range: " + index);
            throw new InternTrackException("Application index is out of range.");
        }

        if (editDetails == null || !editDetails.hasUpdates()) {
            logger.warning("Edit failed: no update fields were provided");
            throw new InternTrackException("Provide at least one field to edit.");
        }

        Application application = userApplications.get(index - 1);
        assert application != null : "Application to edit should not be null";

        if (editDetails.getCompany() != null) {
            application.setCompany(editDetails.getCompany());
        }
        if (editDetails.getRole() != null) {
            application.setRole(editDetails.getRole());
        }
        if (editDetails.getDeadline() != null) {
            application.setDeadline(editDetails.getDeadline());
        }
        if (editDetails.getContact() != null) {
            application.setContact(editDetails.getContact());
        }
        if (editDetails.getStatus() != null) {
            application.setStatus(editDetails.getStatus());
        }

        logger.info("Updated application at index " + index + ": " + application);
        return application;
    }

    /**
     * Edits only the status of an existing application.
     *
     * @param userApplications The list containing the application.
     * @param index            The 1-based index of the application to edit.
     * @param status           The updated status value.
     * @return The updated Application object.
     * @throws InternTrackException If the index is invalid.
     */
    public static Application editApplicationStatus(ArrayList<Application> userApplications,
                                                    int index, String status) throws InternTrackException {
        return editApplication(userApplications, index, new EditDetails(null, null, null, null, status));
    }

    /**
     * Filters applications using the supplied criterion.
     *
     * @param userApplications The list to filter.
     * @param criteria         The field and value used for filtering.
     * @return A list of applications that match the criterion.
     */
    public static ArrayList<Application> filterApplications(ArrayList<Application> userApplications,
                                                            FilterCriteria criteria) {
        if (criteria.getField() == FilterCriteria.Field.DEADLINE) {
            return filterApplicationsOnOrBefore(userApplications, criteria.getDeadlineValue());
        }

        ArrayList<Application> filteredApplications = new ArrayList<>();
        for (Application application : userApplications) {
            String applicationValue = getTextFieldValue(application, criteria.getField());
            if (applicationValue != null && applicationValue.equalsIgnoreCase(criteria.getTextValue())) {
                filteredApplications.add(application);
            }
        }
        logger.log(Level.INFO, "Filtered applications by " + criteria.getSummary()
                + ". Matches: " + filteredApplications.size());
        return filteredApplications;
    }

    /**
     * Filters applications whose deadlines are on or before the specified date.
     *
     * @param userApplications The list to filter.
     * @param deadline         The cutoff date for filtering.
     * @return A list of applications with deadlines on or before the given date.
     */
    public static ArrayList<Application> filterApplicationsOnOrBefore(ArrayList<Application> userApplications,
                                                                      LocalDate deadline) {
        ArrayList<Application> filteredApplications = new ArrayList<>();
        for (Application application : userApplications) {
            LocalDate applicationDeadline = application.getDeadline();
            if (applicationDeadline != null && !applicationDeadline.isAfter(deadline)) {
                filteredApplications.add(application);
            }
        }
        logger.log(Level.INFO, "Filtered applications on or before deadline=" + deadline
                + ". Matches: " + filteredApplications.size());
        return filteredApplications;
    }

    /**
     * Retrieves the string value of a specified field from an application.
     *
     * @param application The application to retrieve the value from.
     * @param field       The field whose value is to be retrieved.
     * @return The string value of the specified field, or null if not applicable.
     */
    private static String getTextFieldValue(Application application, FilterCriteria.Field field) {
        return switch (field) {
        case COMPANY -> application.getCompany();
        case ROLE -> application.getRole();
        case CONTACT -> application.getContact();
        case STATUS -> application.getStatus();
        default -> null;
        };
    }

    /**
     * Sorts applications based on the given criteria.
     *
     * <p>The first element in the criteria array specifies the field to sort by
     * (e.g., "ROLE", "STATUS", "COMPANY", "CONTACT", "DEADLINE").
     * <p>
     * Optional flags:
     * <ul>
     *     <li>"DESC" - sorts in descending order</li>
     *     <li>"NONNULL" - excludes applications with null values for the chosen field</li>
     * </ul>
     *
     * @param userApplications The list of applications to sort.
     * @param criteria An array specifying the sorting field and optional flags.
     * @return A new list of sorted applications.
     * @throws InternTrackException If the sorting criteria is invalid.
     */
    public static ArrayList<Application> sortApplicationsByCriteria(ArrayList<Application> userApplications,
                                                                    String[] criteria) throws InternTrackException {
        assert criteria.length > 0 : "There must be some sorting criteria";
        assert criteria.length < 4 : "There are at most 3 criteria";
        boolean isDesc = false;
        boolean isNonnull = false;
        for (int i = 1; i < criteria.length; i++) {
            assert criteria[i].equals("DESC") || criteria[i].equals("NONNULL") : "Unknown flag: " + criteria[i];
            if (criteria[i].equals("DESC")) {
                isDesc = true;
            } else {
                isNonnull = true;
            }
        }
        final boolean finalIsDesc = isDesc;
        final boolean finalIsNonnull = isNonnull;

        ArrayList<Application> sortedApplicationList = new ArrayList<>(userApplications);
        if (criteria[0].equals("ROLE")) {
            sortedApplicationList.sort((a, b) -> {
                int condition = a.getRole().compareToIgnoreCase(b.getRole());
                return (finalIsDesc) ? -condition : condition;
            });
            return sortedApplicationList;
        } else if (criteria[0].equals("STATUS")) {
            sortedApplicationList.sort((a, b) -> {
                int condition = a.getStatus().compareToIgnoreCase(b.getStatus());
                return (finalIsDesc) ? -condition : condition;
            });
            return sortedApplicationList;
        } else if (criteria[0].equals("COMPANY")) {
            sortedApplicationList.sort((a, b) -> {
                int condition = a.getCompany().compareToIgnoreCase(b.getCompany());
                return (finalIsDesc) ? -condition : condition;
            });
            return sortedApplicationList;
        } else if (criteria[0].equals("CONTACT")) {
            sortedApplicationList.sort((a, b) -> {
                String contactA = a.getContact();
                String contactB = b.getContact();
                if (contactA == null && contactB == null) {
                    return 0;
                } else if (contactA == null) { // a null so a should at the back
                    return 1;
                } else if (contactB == null) {// b null so b should at the back
                    return -1;
                }
                int condition = contactA.compareToIgnoreCase(contactB);
                return (finalIsDesc) ? -condition : condition;
            });
            if (!finalIsNonnull) {
                return sortedApplicationList;
            }
            ArrayList<Application> filteredApplicationList = new ArrayList<>();
            for (Application app : sortedApplicationList) {
                if (app.getContact() != null) {
                    filteredApplicationList.add(app);
                }
            }
            return filteredApplicationList;
        } else if (criteria[0].equals("DEADLINE")) {
            sortedApplicationList.sort((a, b) -> {
                LocalDate deadlineA = a.getDeadline();
                LocalDate deadlineB = b.getDeadline();
                if (deadlineA == null && deadlineB == null) {
                    return 0;
                } else if (deadlineA == null) { // a null so a should at the back
                    return 1;
                } else if (deadlineB == null) {// b null so b should at the back
                    return -1;
                }
                int condition;
                if (deadlineA.isEqual(deadlineB)) {
                    return 0;
                }
                if (deadlineA.isBefore(deadlineB)) {
                    condition = -1;
                } else {
                    condition = 1;
                }
                return (finalIsDesc) ? -condition : condition;
            });
            if (!finalIsNonnull) {
                return sortedApplicationList;
            }
            ArrayList<Application> filteredApplicationList = new ArrayList<>();
            for (Application app : sortedApplicationList) {
                if (app.getDeadline() != null) {
                    filteredApplicationList.add(app);
                }
            }
            return filteredApplicationList;
        }
        throw new InternTrackException("Wrong sorting criteria, please try again");

    }
}
