@startuml

skinparam classAttributeIconSize 0
hide circle

class ApplicationList {
  + {static} addApplications(ArrayList<Application>, String) : Application
  + {static} editApplication(ArrayList<Application>, int, EditDetails) : Application
  + {static} editApplicationStatus(ArrayList<Application>, int, String) : Application
  + {static} filterApplications(ArrayList<Application>, FilterCriteria) : ArrayList<Application>
  + {static} filterApplicationsOnOrBefore(ArrayList<Application>, LocalDate) : ArrayList<Application>
  + {static} sortApplicationsByCriteria(ArrayList<Application>, String[]) : ArrayList<Application>
}

class Application {
  - company : String
  - role : String
  - deadline : LocalDate
  - contact : String
  - status : String
}

class EditDetails {
  - company : String
  - role : String
  - deadline : LocalDate
  - contact : String
  - status : String
}

class FilterCriteria {
  - field : Field
  - textValue : String
  - deadlineValue : LocalDate
}

class Field <<enumeration>> {
  COMPANY
  ROLE
  DEADLINE
  CONTACT
  STATUS
}

ApplicationList ..> Application
ApplicationList ..> EditDetails
ApplicationList ..> FilterCriteria
FilterCriteria --> Field

@enduml